--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "nconf": "~0.6.8",
     "colors": "~0.6.2",
-    "mysql": "~2.0.0"
+    "mysql": "~2.0.0",
+    "optimist": "~0.6.0"
   },
   "repository": {
     "type": "git", 
