add notifications support - pushover

--- a/config-sample.json
+++ b/config-sample.json
@@ -1,4 +1,10 @@
 {
+	"notifications": {
+		"pushover": {
+			"users": ["userkey1", "userkey2"],
+			"token": "token string"
+		}
+	},
 	"nodes": [
 		{
 			"label": "Facebook [HTTP]",
