--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Simple monitoring tool",
   "main": "console.js",
   "dependencies": {
-    "nconf": "~0.6.8",
     "colors": "~0.6.2",
-    "mysql": "~2.0.0",
+    "cron": "^1.0.9",
+    "mysql": "^2.0.1",
+    "nconf": "^0.6.9",
     "optimist": "~0.6.0",
-    "pushover-notifications": "~0.1.6"
+    "pushover-notifications": "^0.1.9"
   },
   "repository": {
-    "type": "git", 
+    "type": "git",
     "url": "http://github.com/softius/statis.git"
   },
   "devDependencies": {},
